src/shell-window-tracker.c
@@ -293,7 +293,7 @@ get_app_from_window_group (ShellWindowTracker  *tracker,
  * @window: a #MetaWindow
  *
  * Check if the pid associated with @window corresponds to an
- * application we launched.
+ * application.
  *
  * Return value: (transfer full): A newly-referenced #ShellApp, or %NULL
  */
@@ -312,7 +312,7 @@ get_app_from_window_pid (ShellWindowTracker  *tracker,
   if (pid == -1)
     return NULL;
 
-  result = g_hash_table_lookup (tracker->launched_pid_to_app, GINT_TO_POINTER (pid));
+  result = shell_window_tracker_get_app_from_pid (tracker, pid);
   if (result != NULL)
     g_object_ref (result);
 
